--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "fortran-rs"
 version = "0.1.0"
-edition = "2021"
+edition = "2021" 
+authors = ["Xavier2p <https://github.com/Xavier2p>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
