--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,11 @@ name = "fortran-rs"
 version = "0.1.0"
 edition = "2021" 
 authors = ["Xavier2p <https://github.com/Xavier2p>"]
+description = "An open-source Fortran interpreter.\nWritten in Rust."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-test-case = "2.2.2"
+test-case = "3.1.0"
 colored = "2.0.0"
-clap = { version = "4.0.32", features = ["derive"] }
+clap = { version = "3.2.25", features = ["derive"] }
