--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           mkdir -p docs
           cp -r target/doc/* docs/
-          echo '<meta http-equiv="refresh" content="0; URL=fortran-rs">' > docs/index.html
+          echo '<meta http-equiv="refresh" content="0; URL=fortran_rs">' > docs/index.html
 
       - name: Deploy Documentation
         uses: peaceiris/actions-gh-pages@v3
