update workflows, deps and install

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,9 +12,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Run tests
-        run: |
-          echo "Running tests"
-          echo "Tests passed"
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --all --all-features
